WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
Bug 152192
Modern IDB: storage/indexeddb/cursor-continue.html fails
https://bugs.webkit.org/show_bug.cgi?id=152192
Summary
Modern IDB: storage/indexeddb/cursor-continue.html fails
Brady Eidson
Reported
2015-12-11 15:32:15 PST
Modern IDB: storage/indexeddb/cursor-continue.html fails We were using the wrong key returned from the previous iteration when deciding if the call to cursor.continue() was valid.
Attachments
Patch v1
(7.29 KB, patch)
2015-12-11 15:34 PST
,
Brady Eidson
achristensen
: review+
achristensen
: commit-queue+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brady Eidson
Comment 1
2015-12-11 15:34:14 PST
Created
attachment 267193
[details]
Patch v1
Brady Eidson
Comment 2
2015-12-11 15:53:34 PST
https://trac.webkit.org/changeset/193990
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug