Modern IDB: storage/indexeddb/cursor-continue.html fails. https://bugs.webkit.org/show_bug.cgi?id=152192

Reviewed by Alex Christensen.

Source/WebCore:

No new tests (At least one failing test now passes).

* Modules/indexeddb/client/IDBCursorImpl.cpp:
(WebCore::IDBClient::IDBCursor::continueFunction): Check against the current key, not the current primary key.
(WebCore::IDBClient::IDBCursor::setGetResult): Also save off the current IDBKeyData.
* Modules/indexeddb/client/IDBCursorImpl.h:

LayoutTests:

* platform/mac-wk1/TestExpectations:
* storage/indexeddb/cursor-continue-expected.txt:

Canonical link: https://commits.webkit.org/170317@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@193990 268f45cc-cd09-0410-ab3c-d52691b4dbfc